--- a/Environment_details/environment.yml
+++ b/Environment_details/environment.yml
@@ -1,1 +1,18 @@
+name: solar-pv-verification
+channels:
+  - conda-forge
+  - pytorch
+dependencies:
+  - python=3.10
+  - numpy
+  - pandas
+  - pillow
+  - requests
+  - shapely
+  - opencv
+  - pip
+  - pip:
+      - ultralytics
+      - torch
+      - torchvision
 
