--- a/Environment_details/requirements.txt
+++ b/Environment_details/requirements.txt
@@ -1,11 +1,9 @@
-ultralytics>=8.0.0
-torch>=2.0.0
-torchvision>=0.15.0
-numpy>=1.23.0
-pandas>=1.5.0
-opencv-python>=4.7.0
-Pillow>=9.4.0
-requests>=2.28.0
-shapely>=2.0.0
-
-
+ultralytics==8.3.237
+torch>=2.0,<3.0
+torchvision>=0.15,<1.0
+numpy
+pandas
+pillow
+requests
+shapely>=2.0,<3.0
+opencv-python
